# youtube_practice

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  install-guideline.md  pyproject.toml
.claude/agents/: code-reviewer.md  quality-checker.md  test-writer.md  youtube-script-writer.md
.claude/commands/: carousel-copywriting.md  detect-releases.md  generate-carousel.md  generate-script.md  generate-shorts.md  generate-video.md  voice-clone-setup.md
.claude/hooks/: check_python_syntax.py  quality_check.py  ruff_quick_check.py  track_modifications.py
.claude/rules/: cc-shorts.md  memory-management.md  pipeline-flow.md  remotion-config.md
app/: __init__.py  cli.py  config.py  providers.py
config/: config.api.yaml  tts_dictionary.yaml
docs/: avatar-overlay-plan.md  broll_pipeline.md  carousel-improvement-roadmap.md  command-skill-guide.md  remotion-ai-guide.md  remotion-skills-architecture.md  setup-guide-api-mode.md  workshop-zip-guide.md
docs/shorts/: caption-guideline.md  cc-hook-angles.md  hook-patterns-70.md  hook-strategy.md  layout-diagram.md
docs/workshop/: carousel-architecture.md  config-race-and-skill-routing.md
entities/: __init__.py
entities/audio/: __init__.py  model.py
entities/project/: __init__.py  model.py
entities/scene/: __init__.py  model.py
entities/script/: __init__.py  model.py
entities/slide/: __init__.py  model.py
entities/subtitle/: model.py  (+1 more)
prompts/: broll_analysis.txt  broll_prompt_enhancement.txt  broll_prompt_enhancement_kontext.txt  broll_scene_grouping.txt  broll_source_decision.txt  channel_identity.txt  manim_scene_generation.txt  subtitle_correction.txt  viral_segment_selection.txt
remotion/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
scripts/: regenerate_carousel.py
shared/: __init__.py  constants.py
workshop/: 00-timetable.md  01-hands-on-setup.md  02-architecture.md  03-claude-code-basics.md  04-skills-system.md  05-slide-generation.md  06-pipeline-reference.md  07-multi-format-strategy.md  08-advanced-workflows.md  09-config-customization.md  10-visual-identity.md  11-quality-iteration.md  12-content-strategy.md  13-custom-skills.md  14-real-world-scenarios.md  15-youtube-upload-strategy.md  16-faq-troubleshooting.md  17-quick-reference.md  18-dev-methodology.md  19-skills-deep-dive.md  20-alternative-tts-guide.md  README.md
(+313 files in other folders)
